--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -10,6 +10,102 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.resp {
+  position: relative;
+  min-width: 320px;
+  width: 100%;
+  padding-top: 130%;
+  min-height: 452px;
+  display: block;
+  margin: 0 auto;
+}
+.topimg img{
+  width: 80%;
+  height: auto;
+  position: absolute;
+  top: 3%;
+  left: 10%;
+}
+.logo img{
+  height: 10%;
+  width: auto;
+  position: absolute;
+  left: 0;
+  top: 3%;
+}
+.sub1 img{
+  width: 25%;
+  height: auto;
+  position: absolute;
+  right: 10%;
+  top: 5%;
+}
+.sub1 img:hover{
+  opacity: 0.7;
+}
+.sub2 img{
+  width: 25%;
+  position: absolute;
+  top: 15%;
+  left: 2%;
+}
+.sub2 img:hover{
+  opacity: 0.7;
+}
+.sub3 img{
+  width: 25%;
+  position: absolute;
+  top: 35%;
+  right: 2%;
+}
+.sub3 img:hover{
+  opacity: 0.7;
+}
+.sub4 img{
+  width: 25%;
+  position: absolute;
+  top: 55%;
+  right: 5%;
+}
+.sub4 img:hover{
+  opacity: 0.7;
+}
+.sub5 {
+  width: 15%;
+  height: 8%;
+  position: absolute;
+  top: 35%;
+  left: 3%;
+  background: rgb(193, 232, 255);
+}
+.sub6 {
+  width: 15%;
+  position: absolute;
+  top: 45%;
+  left: 3%;
+}
+
+.fadein {
+  opacity: 0;
+  animation-name: fadein;
+  animation-duration: 2.5s;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
+}
+@keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+body{
+  background: linear-gradient(-135deg, #e4bc96, #e99241);
+}
+
 /*追記ここまで*/
 
 :root {
